firebase #8 - connect to firebase admin - auth api - get all users
