# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Project to control budget for home",
+        "description": "Project to control budget for home.\\n\\nAuthorization header: insert your access token default (Bearer TOKEN)",
         "title": "budget4home API",
         "contact": {},
         "version": "1.0"
@@ -9,8 +9,13 @@
     "host": "localhost:5000",
     "basePath": "/api",
     "paths": {
-        "/api/expenses": {
+        "/expenses": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of expenses",
                 "consumes": [
                     "application/json"
@@ -24,8 +29,13 @@
                 "summary": "Show a list of expenses"
             }
         },
-        "/api/expenses/full": {
+        "/expenses/full": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -40,6 +50,11 @@
         },
         "/labels": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get list of labels",
                 "consumes": [
                     "application/json"
@@ -74,6 +89,41 @@
                 ],
                 "summary": "Show a list of labels with full details"
             }
+        },
+        "/users": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get list of users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Show a list of users",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
